add model tests about, courses

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -11,8 +11,8 @@
     <div class = "about-background contact-background d-flex flex-column justify-content-center content align-items-center">
         <div class="container">
             <div class="row">
-                <div class="d-none d-md-block col"></div>
-                <div class="col-12 col-md-5 my-md-5 my-auto bg-light bg-gradient rounded">
+                <div class="col"></div>
+                <div class="col-12 col-md-6 my-sm-5 my-auto bg-light bg-gradient rounded">
                     <h1 class = "text-center p-3 fs-3">CONTACT US</h1>
                     {% if contacted %}
                         <div class="alert alert-success">
