--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -69,7 +69,7 @@
                     </ul>
                     </div>
                     {% empty %}
-                    <p class = "fs-6">Sorry no products match your search</p>
+                      <p class="text-center w-100 fs-6 mt-5">Sorry no products match your search</p>
                 {% endfor %}
             </div>
             <div class="pagination justify-content-end">  
