--- a/contact/static/contact/css/contact.css
+++ b/contact/static/contact/css/contact.css
@@ -1,4 +1,5 @@
-.about-background{
+/* Image for contact page */
+.contact-background{
     background-image: url(../img/contact-us-learn-to-scuba-dive.jpg);
     background-repeat: no-repeat;
     background-position: center center;
