--- a/courses/templates/courses/course_confirm_delete.html
+++ b/courses/templates/courses/course_confirm_delete.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<!-- Main Header -->
 <div class="container">
     <div class="row">
       <div class="col">
