--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -167,6 +167,7 @@
                 {% endif %}
             </div>
         </div>
+        <!-- Stripe form taken from Boutique Ado Code Institute -->
         <div class="col-12 col-lg-6 mt-5 mt-lg-auto">
             <h3 class = "fs-5">PAYMENT DETAILS</h3>
             <p class="text-muted">Please fill out the form below to complete your order</p>
