--- a/courses/static/courses/css/courses.css
+++ b/courses/static/courses/css/courses.css
@@ -11,3 +11,24 @@
     object-fit: cover;
     object-position: center center;
 }
+
+.background-awaiting::after{
+    content:"";
+    width:100%;
+    height:100%;
+    background-image: url(../img/contact-us-learn-to-scuba-dive.jpg);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.background-awaiting::before {
+    content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(to bottom right,#002f4b,#474240);
+        opacity: .6;
+}
