--- a/courses/templates/courses/course_update_form.html
+++ b/courses/templates/courses/course_update_form.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="col-12 col-lg-6 pt-2">
                     <img class="img-fluid"
-                        src="{%if not object.image.url %}{% static 'img/scuba-equipment-shop.jpg'%} {% else %}{{object.image.url}}{% endif %}" alt="{{object.name}}">
+                        src="{%if not object.image %}{% static 'img/scuba-equipment-shop.jpg'%} {% else %}{{object.image.url}}{% endif %}" alt="{{object.name}}">
                 </div>
                 <div class="col-12 col-lg-6 translucent-body mb-5">
                     <form method="POST" class="p-1" enctype='multipart/form-data'>
@@ -39,9 +39,7 @@
     </div>
 </div>
 {% endwith %}
-
 {% endblock %}
-
 {% block postloadjs %}
 {{ block.super }}
 <script src="{% static 'courses/js/courses.js' %}"></script>
