--- a/templates/base.html
+++ b/templates/base.html
@@ -89,12 +89,12 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                aria-expanded="false">BRANDS</a>
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">BRANDS</a>
               <ul class="dropdown-menu">
                 {% for brand in brands %}
-                <li><a class="dropdown-item"
-                    href="{% url 'all_products' %}?brand__name__iexact={{brand.name}}">{{ brand.name | upper }}</a></li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'all_products' %}?brand__name__iexact={{brand.name}}">{{ brand.name | upper }}</a>
+                </li>
                 {% endfor %}
                 {% if user.is_authenticated %}
                 {% if user.is_staff %}
@@ -107,12 +107,15 @@
             </li>
             <!-- Dropdown menu for courses -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                aria-expanded="false">COURSES</a>
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">COURSES</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{% url 'course_list' %}">ALL COURSES</a></li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'course_list' %}">ALL COURSES</a>
+                </li>
                 {% for course in courses %}
-                <li><a class="dropdown-item" href="{% url 'course_detail' course.slug %}">{{course.name|upper}}</a></li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'course_detail' course.slug %}">{{course.name|upper}}</a>
+                </li>
                 {% endfor %}
                 {% if user.is_authenticated %}
                 {% if user.is_staff %}
@@ -159,23 +162,23 @@
                   <a class=" dropdown-item" href="{% url 'account_signup' %}">REGISTER</a>
                 </li>
                 {% endif %}
+              </ul>
             </li>
           </ul>
           <li class="nav-item">
             <div class="bag-qty-container">
-            <a class="nav-link postition-relative me-2" href="{% url 'view_bag' %}"><span class = "d-lg-none">CART ({{ product_count }})</span><i class="d-none d-lg-block bi bi-bag"></i></a>
-            <div class = "d-none d-lg-block bag-qty border-radius-50">
-            <h6 class = "text-center fs-6">{{product_count}}</h6>
+              <a class="nav-link postition-relative me-2" href="{% url 'view_bag' %}"><span class = "d-lg-none">CART ({{ product_count }})</span><i class="d-none d-lg-block bi bi-bag"></i></a>
+              <div class = "d-none d-lg-block bag-qty border-radius-50">
+              <h6 class = "text-center fs-6">{{product_count}}</h6>
+              </div>
             </div>
-          </div>
           </li>
         </div>
       </div>
     </nav>
     <div class="container">
       <form class="d-lg-none d-flex" method="GET" action="{% url 'search_products' %}">
-        <input class="form-control me-2" type="search" name="q" placeholder="What are you looking for?"
-          aria-label="Search">
+        <input class="form-control me-2" type="search" name="q" placeholder="What are you looking for?" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
@@ -199,7 +202,7 @@
             {% endwith %}
         {% endfor %}
     </div>
-{% endif %}
+    {% endif %}
     {% endfor %}
   </div>
   {% endif %}
@@ -210,14 +213,11 @@
   {% block content %}
   {% endblock %}
 
-  <footer class="footer mt-5 container-fluid">
+<footer class="footer mt-5 container-fluid">
     <!-- Begin Mailchimp Signup Form -->
     <div class="container d-flex justify-content-center w-100">
-    <div id="mc_embed_signup">
-      <form
-        action="https://featherstar.us17.list-manage.com/subscribe/post?u=9149d14a7f81b786be4a1ee54&amp;id=4e6fba4a14"
-        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
-        novalidate>
+      <div id="mc_embed_signup">
+      <form action="https://featherstar.us17.list-manage.com/subscribe/post?u=9149d14a7f81b786be4a1ee54&amp;id=4e6fba4a14" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
           <h2 class = "text-center">Mailing List</h2>
           <div class="indicates-required visually-hidden"><span class="asterisk">*</span> indicates required</div>
@@ -231,8 +231,9 @@
             <div class="response" id="mce-success-response" style="display:none"></div>
           </div>
           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-              name="b_9149d14a7f81b786be4a1ee54_4e6fba4a14" tabindex="-1" value=""></div>
+          <div style="position: absolute; left: -5000px;" aria-hidden="true">
+            <input type="text" name="b_9149d14a7f81b786be4a1ee54_4e6fba4a14" tabindex="-1" value="">
+          </div>
           <div class="optionalParent">
             <div class="clear foot">
               <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button mx-auto">
@@ -240,8 +241,8 @@
           </div>
         </div>
       </form>
+      </div>
     </div>
-  </div>
   <div class="container-fluid w-100vw ps-3 pt-3 pe-3 white-text bg-dark">
     <div class="row">
       <div class="col-md-4">
@@ -319,5 +320,4 @@
   </script>
   {% endblock %}
 </body>
-
 </html>
