fix div in list HTML error

--- a/templates/base.html
+++ b/templates/base.html
@@ -165,6 +165,7 @@
               </ul>
             </li>
           </ul>
+          <ul class="navbar-nav me-auto me-lg-1 ms-lg-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <div class="bag-qty-container">
               <a class="nav-link postition-relative me-2" href="{% url 'view_bag' %}"><span class = "d-lg-none">CART ({{ product_count }})</span><i class="d-none d-lg-block bi bi-bag"></i></a>
@@ -173,6 +174,7 @@
               </div>
             </div>
           </li>
+        </ul>
         </div>
       </div>
     </nav>
