--- a/templates/base.html
+++ b/templates/base.html
@@ -291,17 +291,16 @@
     </div>
   </div>
 </footer>
-
   {% block postloadjs %}
-  <script type="text/javascript">
+  <script>
     var toastElList = [].slice.call(document.querySelectorAll('.toast'))
     var toastList = toastElList.map(function (toastEl) {
       return new bootstrap.Toast(toastEl)
     });
     toastList.forEach(toast => toast.show());
   </script>
-  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-  <script type='text/javascript'>
+  <script src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+  <script>
     (function ($) {
       window.fnames = new Array();
       window.ftypes = new Array();
