--- a/products/templates/products/category_list.html
+++ b/products/templates/products/category_list.html
@@ -18,7 +18,9 @@
 </div>
 <div class = "container d-flex flex-column align-items-center content justify-content-center">
   <div class="table-responsive">
-        <div class = "d-flex w-100 justify-content-end"><a class = "btn btn-success" href="{% url 'add_category' %}">Add</a></div>
+        <div class = "d-flex w-100 justify-content-end">
+          <a class = "btn btn-success" href="{% url 'add_category' %}">Add</a>
+        </div>
     <table class="table table-sm">
       <thead class="thead-dark">
         <tr>
@@ -36,6 +38,6 @@
       </tbody>
     </table>
   </div>
-  </div>
+</div>
 
 {% endblock %}
