--- a/products/templates/products/update_category.html
+++ b/products/templates/products/update_category.html
@@ -16,14 +16,14 @@
       </div>
     </div>
 </div>
-<<div class="container d-flex flex-column align-items-center content justify-content-center">
+<div class="container d-flex flex-column align-items-center content justify-content-center">
   <div>
-  <form action='.' method='POST'>{% csrf_token %}
-    {{ form | crispy }}
-    <div class = "mt-3 d-flex w-100 justify-content-center">
+    <form action='.' method='POST'>{% csrf_token %}
+      {{ form | crispy }}
+      <div class = "mt-3 d-flex w-100 justify-content-center">
         <input class = "btn btn-primary me-3" type='submit' value='Save'><a class = "btn btn-secondary" href='../'>Cancel</a>
       </div>  
-</form>
-</div>
+    </form>
+  </div>
 </div>
 {% endblock %}
