fix HTML vlaidation div  error

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -66,7 +66,7 @@
                 <div class="card-body">
                   <h5 class="card-title">PRO DIVING COURSES</h5>
                   <p class="card-text">Work the dream...</p>
-                  <a href="{% url 'course_list' %}?level__iexact=professional" alt="pro-diving" class="btn btn-primary">Go Pro</a>
+                  <a href="{% url 'course_list' %}?level__iexact=professional" class="btn btn-primary">Go Pro</a>
                 </div>
               </div>
         </div>
@@ -121,7 +121,7 @@
                     WE'D LOVE TO HEAR FROM YOU
                 </p>
             </div>
-            <div role="button" class="home-inner-button-container btn btn-primary">
+            <div class="home-inner-button-container btn btn-primary">
                 <a class="shop-now" href="{% url 'contact' %}">Contact</a>
             </div>
         </div>
