--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -48,32 +48,22 @@
                     <label class="mb-3" for="exampleFormControlSelect1"><strong>Select size:</strong></label>
                     <select name="stockable" class="form-control w-50" id="exampleFormControlSelect1">
                         {% for variant in inventory %}
-                        <option name='product_size' class="size-option" value="{{ variant.size }}"
-                            data-sku="{{variant.sku}}"
-                            session-quantity="{% if bag_items %} {% for item in bag_items %} {% if item.inventory.sku == variant.sku %}{{ item.quantity }}{% endif %}{% endfor %}{% endif %}"
-                            data-count="{{ variant.count }}">{{variant.size}}</option>
+                        <option class="size-option" value="{{ variant.size }}" data-sku="{{variant.sku}}" data-session-quantity="{% if bag_items %} {% for item in bag_items %} {% if item.inventory.sku == variant.sku %}{{ item.quantity }}{% endif %}{% endfor %}{% endif %}" data-count="{{ variant.count }}">{{variant.size}}</option>
                         {% endfor %}
                     </select>
                     <p class="mt-3"><strong>Quantity:</strong></p>
-                    
                     <div class="form-group d-flex">
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-btn">
-                                        <button type="button"
-                                            class="quantity-left-minus btn btn-secondary bi bi-dash-lg"
-                                            data-type="minus" data-field="">
+                                        <button type="button" class="quantity-left-minus btn btn-secondary bi bi-dash-lg" data-type="minus" data-field="">
                                         </button>
                                     </span>
                                 </div>
-                                <input class="form-control qty_input qty-input input-number" type="number"
-                                    name="quantity" value="1" min="1" max="{{ variant.count }}" id="id_qty"
-                                    data_item_id="{{ product.id }}" data-sku="">
+                                <input class="form-control qty_input qty-input input-number" type="number" name="quantity" value="0" min="0" max="{{ variant.count }}" id="id_qty" data-sku="">
                                 <div class="input-group-append">
                                     <span class="input-group-btn">
-                                        <button type="button"
-                                            class="quantity-right-plus btn btn-secondary bi bi-plus-lg" data-type="plus"
-                                            data-field="">
+                                        <button type="button" class="quantity-right-plus btn btn-secondary bi bi-plus-lg" data-type="plus" data-field="">
                                         </button>
                                     </span>
                                 </div>
